--- a/src/PerfectGuid수정ver01/1장/1.3 넘파이.ipynb
+++ b/src/PerfectGuid수정ver01/1장/1.3 넘파이.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,9 +26,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "list1: [1, 2, 3]\n",
+      "list1 type: <class 'list'>\n",
+      "array1: [1 2 3]\n",
+      "array1 type: <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1, 2, 3]\n",
     "print(\"list1:\",list1)\n",
@@ -48,9 +59,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1 type: <class 'numpy.ndarray'>\n",
+      "array1 array 형태: (3,)\n",
+      "array2 type: <class 'numpy.ndarray'>\n",
+      "array2 array 형태: (2, 3)\n",
+      "array3 type: <class 'numpy.ndarray'>\n",
+      "array3 array 형태: (1, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "array1 = np.array([1,2,3])\n",
     "print('array1 type:',type(array1))\n",
@@ -61,16 +85,24 @@
     "print('array2 type:',type(array2))\n",
     "print('array2 array 형태:',array2.shape)\n",
     "\n",
-    "array3 = np.array([[1,2,3]])\n",
+    "array3 = np.array([[1,2,3]]) # 2-D\n",
     "print('array3 type:',type(array3))\n",
     "print('array3 array 형태:',array3.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "array1: 1차원, array2: 2차원, array3:  2차원\n"
+     ]
+    }
+   ],
    "source": [
     "print('array1: {:0}차원, array2: {:1}차원, array3: {:2}차원'.format(array1.ndim,array2.ndim,array3.ndim))\n"
    ]
@@ -84,9 +116,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "<class 'numpy.ndarray'>\n",
+      "[1 2 3] int64\n"
+     ]
+    }
+   ],
    "source": [
     "list1 = [1,2,3]\n",
     "print(type(list1))\n",
@@ -98,9 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1' '2' 'test'] <U21\n",
+      "[1. 2. 3.] float64\n"
+     ]
+    }
+   ],
    "source": [
     "list2 = [1, 2, 'test']\n",
     "array2 = np.array(list2)\n",
@@ -959,7 +1010,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
